# BRAINWAVE_INSIGHTGPT

./: verify_history_persistence.py
backend/: .gitignore  pyproject.toml  requirements.txt
backend/src/backend/: main.py
backend/src/backend/api/v1/: api.py
backend/src/backend/api/v1/endpoints/: auth.py  chat.py  documents.py  health.py  metrics.py  negotiation.py  qa.py
backend/src/backend/core/: config.py  logging.py  security.py
backend/src/backend/dependencies/: auth.py  services.py
backend/src/backend/models/: chat.py  document.py  negotiation.py  qa.py  user.py
backend/src/backend/services/: auth_service.py  cache_service.py  chat_session_service.py  clause_segmenter.py  document_orchestrator.py  document_processor_grpc.py  document_processor_http.py  document_queue_manager.py  document_storage.py  embeddings_service.py  firestore_client.py  gemini_client.py  gemini_service.py  language_detection_service.py  negotiation_service.py  privacy_service.py  qa_service.py  readability_service.py  risk_analyzer.py
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/chat/: page.tsx
frontend/app/(app)/dashboard/: page.tsx
frontend/app/(app)/history/: page.tsx
frontend/app/(app)/settings/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/documents/: page.tsx
frontend/app/history/: page.tsx
frontend/app/login/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: AnalysisPanel.tsx  Aurora.tsx  ReadabilityPanel.tsx  RiskHeatmap.tsx  app-sidebar.tsx
frontend/contexts/: AuthContext.tsx  ChatContext.tsx
frontend/lib/: api.ts  auth-fetch.ts
