[tool.poetry]
name = "brainwave-insightgpt"
version = "0.1.0"
description = ""
authors = ["Priyanshu <priyanshunegi246@gmail.com>"]
readme = "README.md"

packages = [{include = "backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"

[tool.poetry.scripts]
start = "backend.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
