[tool.poetry]
name = "brainwave-insightgpt"
version = "0.1.0"
description = ""
authors = ["Priyanshu <priyanshunegi246@gmail.com>"]
readme = "README.md"
packages = [{include = "backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
pydantic-settings = "^2.1.0"
google-cloud-firestore = "^2.13.1"
google-auth = "^2.25.2"

[tool.poetry.scripts]
start = "backend.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
